--- a/PassiveFriendship/manifest.json
+++ b/PassiveFriendship/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "Name": "PassiveFriendship",
   "Author": "StultusV",
-  "Version": "1.0.0",
+  "Version": "1.0.4",
   "Description": "Passively gains friendship with villagers you hang out with",
   "UniqueID": "StultusV.PassiveFriendship",
   "EntryDll": "PassiveFriendship.dll",
   "MinimumApiVersion": "3.0.0",
-  "UpdateKeys": []
+  "UpdateKeys": [ "Nexus:8732" ]
 }
